// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toaster > renders correctly with close button 1`] = `
[
  .emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<h3
    class="emotion-0 emotion-1"
  >
    Title
  </h3>,
]
`;

exports[`Toaster > renders correctly with close button 2`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
}

.emotion-0.Toastify__toast {
  background-color: #ffffff;
  color: #3f4250;
  padding: 1rem;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
}

.emotion-0.Toastify__toast-container {
  width: 19.5rem;
}

.emotion-0 .Toastify__toast-body {
  margin: 0;
  padding: 0;
  display: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-7:hover,
.emotion-7:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-9 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-9 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications Alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      class="Toastify"
      id="notification"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        tabindex="-1"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default emotion-0 Toastify--animate Toastify__slide-enter--top-right"
          data-in="true"
          id="1"
          role="alert"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <div>
              icon
            </div>
            <div
              class="emotion-3 emotion-2"
            >
              <h3
                class="emotion-5 emotion-6"
              >
                Title
              </h3>
              Description
            </div>
            <button
              aria-label="close"
              class="emotion-7 emotion-8"
              type="button"
            >
              <svg
                class="emotion-9 emotion-10"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </div>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--default"
              role="progressbar"
              style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Toaster > renders correctly with custom close button 1`] = `
[
  <button
    type="button"
  >
    Decline
  </button>,
]
`;

exports[`Toaster > renders correctly with custom close button 2`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
}

.emotion-0.Toastify__toast {
  background-color: #ffffff;
  color: #3f4250;
  padding: 1rem;
  box-shadow: 0px 4px 8px 0px #22263829,0px 8px 24px 0px #2226383d;
}

.emotion-0.Toastify__toast-container {
  width: 19.5rem;
}

.emotion-0 .Toastify__toast-body {
  margin: 0;
  padding: 0;
  display: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications Alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      class="Toastify"
      id="notification"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        tabindex="-1"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--default emotion-0 Toastify--animate Toastify__slide-enter--top-right"
          data-in="true"
          id="2"
          role="alert"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <div>
              Avatar
            </div>
            <div
              class="emotion-3 emotion-2"
            >
              <h3
                class="emotion-5 emotion-6"
              >
                Invitation
              </h3>
              <button
                type="button"
              >
                Decline
              </button>
            </div>
          </div>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--default"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--default"
              role="progressbar"
              style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
